--- a/带传动.md
+++ b/带传动.md
@@ -1,1 +1,87 @@
+# 带传动
+带传动依靠张紧来传输力，依靠“有效摩擦力”
+## 带传动的优缺点（和链、齿轮对比）
+### 优点
+1.结构简单、运行平稳、噪声小（针对链对比）吸收振动，缓和冲击载荷（齿轮对比）
+2.过载时轮带打滑，其他零件起保护作用（链、齿轮对比）
+3.安装精度、制造精度不高（齿轮对比）
+### 缺点
+1.存在弹性滑动，降低效率（链、齿轮）
+2.传动比不准确（齿轮）
+3.寿命短（链齿轮）
+4.要有张紧装置配合（齿轮）
+## 分类
+平带传动、圆带传动、v带传动、多契带传动、同步带
+两轴平行、同向转动场合称为开口传动
+## 带的受力分析
+### 假设
+带的总长不变
+紧边拉力F1、松边拉力F2、张紧力F0
+线弹性假设：F1 - F0 = F0 - F2 或者 F1+F2 = 2F0（动滑轮模型）
+想象带轮是弹簧，张紧力是静止状态下的张力。
+当转动时（顺时针），受摩擦力，下面伸长，绕到带轮上边，进入松边，摩擦力变小（高中面粉袋传动模型）
+下边是紧边、上面是松边。
 
+Ff为带与带轮的总摩擦力，由带传动的功率P和带速V决定
+带传动的有效拉力为Fe
+Fe = P/V
+Fe=Ff
+总摩擦力Ff
+Ff = F1 - F2
+也就是说，总摩擦力等于总的有效拉力
+Fe = Ff = F1 - F2
+有效拉力和功率的关系，P的单位是KW
+$$ P = Fe*V/1000 $$
+
+### 推导(F1、F2、F0、Fe受力平衡分析)
+F1 = F0 + Fe/2， F2 = F0 - Fe/2
+
+### 带传动最大的有效拉力
+欧拉公式，当带轮传动到达打滑临界条件，F1F2的关系式：
+F1 = F2*e**f阿尔法
+最大有效拉力：
+Fe = 2F0*（e**f阿尔法 - 1）/（e**f阿尔法 + 1）
+
+
+### 应力分析(离心应力、拉应力、弯曲应力)(一离二拉三弯)
+拉应力： F1/A, F2/A (A带的横截面积)
+离心应力： (qv**2)/A (q单位长度的质量)
+弯曲应力： 带轮直径越小，弯曲应力越大；带轮越高，弯曲应力越大
+
+## 带的弹性滑动与打滑
+带的弹性变形所导致的带与带轮之间的相对运动，称为弹性滑动。(不要说成造成现象的本质原因)
+导致从动轮V2 < 主动轮V1
+滑动率(和干度定义类似)：
+
+带的传动比不是恒定的，和滑动率有关。
+
+同步带可以解决带传动比的变化。
+
+当工作载荷超过临界值时，发生打滑现象。
+
+## V带的设计
+两种失效形式：打滑、疲劳破坏
+要保证不打滑、有足够的疲劳强度(这两个相互矛盾)
+公式：
+P0 = 
+
+P0是基本额定功率，需要修正
+修正公式(查表)：
+Pr = 
+
+
+### 设计顺序(了解即可)
+1确定计算功率Pca
+Pca = Ka*P
+2选择V带型号
+根据计算功率Pca和小带轮转速n1决定
+3计算小带轮的基准直径和带速
+4确定中心距、选择基准长度
+## V带张紧、安装、防护
+1定期张紧
+2自动张紧
+### 张紧轮张紧
+当中心距不能调节时，要注意
+一般在松边内侧，让带只受单向弯曲
+张紧轮在内侧时，靠vb近大轮，以免影响带在小轮上的包角
+当中心距过小时，将张紧轮设置在带的松边外侧，同时靠近小带轮。
