--- a/传感器及检测原理.md
+++ b/传感器及检测原理.md
@@ -5,10 +5,10 @@
 
 狭义：非电信号 --> 电信号
 
-非电量--敏感元件 -- 转换元件  -- 测量电路 --电量
-
-                           辅助电源
-
+$$
+非电量--敏感元件 -- 转换元件  -- 测量电路(辅助电源) -- 电量
+$$
+                           
 ## 特点
 测量装置，输出主要是电量
 
@@ -40,13 +40,16 @@
 有环形式、圆盘式、直线式
 
 #### 直线型
-R = RO L/A
+
+$$ R = R_oL/A $$
 
 当导线均匀缠绕，输入与输出呈线性，和L有关
 
 #### 角位移型
 
-R = K A
+$$
+R = KA
+$$
 
 与角度有关。
 
@@ -63,7 +66,9 @@ R = K A
 
 横向应变与纵向应变的比值呈现泊松比。
 
-S0 = 1+2μ
+$$
+S_0 = 1+2μ
+$$
 
 灵敏度与泊松比有关，灵敏度为常数。
 
