--- a/带传动.md
+++ b/带传动.md
@@ -1,5 +1,5 @@
 # 带传动
-带传动依靠张紧来传输力，依靠“有效摩擦力”
+带传动依靠**张紧**来传输力，依靠“**有效摩擦力**”
 ## 带传动的优缺点（和链、齿轮对比）
 ### 优点
 
@@ -24,12 +24,18 @@
 两轴平行、同向转动场合称为开口传动
 
 ## 带的受力分析
-### 假设
+### 假设：
 带的总长不变
 
 紧边拉力F1、松边拉力F2、张紧力F0
 
-线弹性假设：F1 - F0 = F0 - F2 或者 F1+F2 = 2F0（动滑轮模型）
+线弹性假设(动滑轮模型)：
+
+$$ F1 - F0 = F0 - F2 $$
+
+或者 
+
+$$ F1+F2 = 2F0 $$
 
 想象带轮是弹簧，张紧力是静止状态下的张力。
 
@@ -39,9 +45,11 @@
 
 Ff为带与带轮的总摩擦力，由带传动的功率P和带速V决定
 
-带传动的有效拉力为Fe
+带传动的有效拉力为
 
-Fe = P/V
+$$ F_e $$
+
+$$ F_e = P/V $$
 
 Fe=Ff
 
@@ -116,7 +124,7 @@ Pr =
 
 1确定计算功率Pca
 
-Pca = Ka*P
+$$ P_ca = K_a*P $$
 
 2选择V带型号
 
