--- a/传感器及检测原理.md
+++ b/传感器及检测原理.md
@@ -66,10 +66,122 @@ $$
 
 横向应变与纵向应变的比值呈现泊松比。
 
+灵敏度与泊松比有关，灵敏度为常数。
+
 $$
 S_0 = 1+2μ
 $$
 
-灵敏度与泊松比有关，灵敏度为常数。
+得
+
+$$ dR/R = S_0\varepsilon $$
+
+其中
+
+$$ dl/l = \varepsilon $$
 
 在一定范围内，变化量只和轴向应变(长度)变化有关
+
+### 基本结构
+
+多采用**栅型结构**
+
+测量应用：
+
+将应变片粘贴于弹性体表面或被测件
+
+材料分为**丝式**和**箔式**
+
+#### 丝式：
+分为**短接式**和**回线式**
+
+### 压阻式传感器(半导体应变片)
+
+压阻效应：材料受压，电阻率发生变化(由于半导体的变化明显，一般都选用半导体)
+
+外力作用下电阻变化量：
+
+$$ dR/R = (1+2\mu)\varepsilon + d\rho/\rho $$
+
+电阻率更为突出，前面的形变忽略不计。
+
+即：
+
+$$ dR/R = d\rho/\rho $$
+
+由半导体理论
+
+$$ d\rho/\rho = \lambda\sigma = \lambda E\varepsilon $$
+
+其中
+
+\lambda 是沿晶向L的压阻系数
+\sigma 是应力
+E 是弹性模量
+因此灵敏度为：
+
+$$ S_0 = dR/R/\varepsilon = d\rho/\rho/\varepsilon =  \lambda E $$
+
+S_0 一般取到 50 - 100。
+
+半导体材料灵敏度比金属的高50-70倍，但是非线性误差大。
+
+### 应变片的使用
+
+1.目测检测
+
+2.万用表测电阻。各应变片阻值差不得大于5欧
+
+3.表面处理
+
+4.502胶粘贴
+
+5.检查应变片和试件的绝缘阻值，大于500M欧
+
+6.应变片保护，防潮
+
+## 电容式传感器
+
+被测量转化为电容。
+
+电容量为：
+
+改变极板间距、遮盖面积、电介质，一般只改变一个变量
+
+### 极距变化型
+
+$$ C = \varepsilon_0\varepsilon A/\delta $$
+
+C与极距成反比，当减小间距时，电容为：
+
+$$ dC = -\varepsilon_0\varepsilon A/\delta**2 d\delta $$
+
+灵敏度：
+
+$$ S = dC/d\delta  = - \varepsilon_0\varepsilon A/\delta**2 = -C/\delta $$
+
+初始极距越小，灵敏度越高，但由于击穿电压限制，也不能太小。
+
+因为是非线性关系，所以测量范围不能太大。
+
+\Delta\delta/\delta_0 = 0.1
+
+小位移测量，0.01微米。
+
+### 面积变化型
+
+分为角位移和线位移。
+测量大位移的变量
+
+#### 平面角位移
+
+推到，面积公式、弧长公式、电容公式、
+
+$$ dC = -\varepsilon_0\varepsilon r**2 /2\delta d\alpha $$
+
+$$ S = dC/d\alpha = - \varepsilon_0\varepsilon r**2/2\delta $$
+
+#### 平面线位移
+
+#### 圆柱线位移
+
