--- a/链传动.md
+++ b/链传动.md
@@ -29,7 +29,7 @@
 
 排数n
 
-链节数 $$ L_p $$
+链节数 $$L_p$$
 
 套筒和内链板是过盈配合
 
@@ -45,9 +45,9 @@
 
 分析：
 
-$$ v = n_1z_1p/60*1000 = n_2z_2p/60*1000 $$
+$$ v = \frac{n_1 z_1 p}{60 * 1000} = \frac{n_2 z_2 p}{60 * 1000} $$
 
-$$ n_1/n_2 = z_2/z_1 $$
+$$ \frac{n_1}{n_2} = \frac{z_2}{z_1} $$
 
 v是水平分速度
 
@@ -59,11 +59,11 @@ p是齿距
 
 进入齿轮：
 
-$$ v_A = R_1\omiga_1 $$
+$$ v_A = R_1\omega_1 $$
 
-$$ v = R_1\omiga_1\cos\gama $$
+$$ v = R_1\omega_1\cos\gamma $$
 
-$$ -180/z_2 <= \gama <= 180/z_2 $$
+$$ \frac{-180}{z_2} \leq \gamma \leq \frac{180}{z_2} $$
 
 无论如何，水平分速度要相等。
 
@@ -95,7 +95,7 @@ $$ -180/z_2 <= \gama <= 180/z_2 $$
 
 链轮小齿轮<7
 
-大齿轮 <= 150
+大齿轮 $$\leq$$ 150
 
 传动比一般小于6
 
