Revise equations and improve formatting in 带传动.md
Updated equations and formatting for clarity in 带传动.md.

--- a/带传动.md
+++ b/带传动.md
@@ -45,46 +45,44 @@ $$ F1+F2 = 2F0 $$
 
 Ff为带与带轮的总摩擦力，由带传动的功率P和带速V决定
 
-带传动的有效拉力为
+带传动的有效拉力为 $F_e$
 
-$$ F_e $$
+$$ F_e = \frac{P}{V} $$
 
-$$ F_e = P/V $$
+$$ F_e=F_f $$
 
-Fe=Ff
+总摩擦力 $F_f$
 
-总摩擦力Ff
-
-Ff = F1 - F2
+$$ F_f = F_1 - F_2 $$
 
 也就是说，总摩擦力等于总的有效拉力
 
-Fe = Ff = F1 - F2
+$$ F_e = F_f = F_1 - F_2 $$
 
 有效拉力和功率的关系，P的单位是KW
 
-$$ P = Fe*V/1000 $$
+$$ P = \frac{F_e V}{1000} $$
 
 
-### 推导(F1、F2、F0、Fe受力平衡分析)
+### 推导($F_1、F_2、F_0、F_e$受力平衡分析)
 
-F1 = F0 + Fe/2， F2 = F0 - Fe/2
+$$ F1 = F0 + \frac{F_e}{2}， F2 = F0 - \frac{F_e}{2} $$
 
 ### 带传动最大的有效拉力
 欧拉公式，当带轮传动到达打滑临界条件，F1F2的关系式：
 
-F1 = F2*e**f阿尔法
+$$ F_1 = F_2*e^{f\alpha} $$
 
 最大有效拉力：
 
-Fe = 2F0*（e**f阿尔法 - 1）/（e**f阿尔法 + 1）
+$$ F_e = 2F_0*（e^{f\alpha} - 1）/（e^{f\alpha} + 1) $$
 
 
 ### 应力分析(离心应力、拉应力、弯曲应力)(一离二拉三弯)
 
-拉应力： F1/A, F2/A (A带的横截面积)
+拉应力： $\frac{F1}{A}, \frac{F2}{A}$ (A带的横截面积)
 
-离心应力： (qv**2)/A (q单位长度的质量)
+离心应力： $\frac{qv^2}{A}$ (q单位长度的质量)
 
 弯曲应力： 带轮直径越小，弯曲应力越大；带轮越高，弯曲应力越大
 
@@ -124,7 +122,7 @@ Pr =
 
 1确定计算功率Pca
 
-$$ P_ca = K_a*P $$
+$$ P_{ca} = K_a*P $$
 
 2选择V带型号
 
