--- a/测试工程/传感器及检测原理.md
+++ b/测试工程/传感器及检测原理.md
@@ -23,7 +23,7 @@ $$
 
 结构型：结构参量变化，如电容
 
-## 电阻式传感器
+# 电阻式传感器
 
 被测量转换为电阻变化量，在通过变换电路变换为电压电流测量。
 
@@ -140,13 +140,13 @@ S_0 一般取到 50 - 100。
 
 6.应变片保护，防潮
 
-## 电容式传感器
+# 电容式传感器
 
 被测量转化为电容。
 
 电容量为：
 
-改变极板间距、遮盖面积、电介质，一般只改变一个变量
+改变**极板间距、遮盖面积、电介质**，一般只改变一个变量
 
 ### 极距变化型
 
@@ -164,24 +164,100 @@ $$ S = dC/d\delta  = - \varepsilon_0\varepsilon A/\delta**2 = -C/\delta $$
 
 因为是非线性关系，所以测量范围不能太大。
 
-\Delta\delta/\delta_0 = 0.1
+$$ \frac{\Delta\delta}{\delta_0} = 0.1
 
 小位移测量，0.01微米。
 
 ### 面积变化型
 
-分为角位移和线位移。
-测量大位移的变量
+分为**角位移和线位移**。
+
+**测量大位移的变量。**
 
 #### 平面角位移
 
 推到，面积公式、弧长公式、电容公式、
 
-$$ dC = -\varepsilon_0\varepsilon r**2 /2\delta d\alpha $$
+$$ dC = -\varepsilon_0\varepsilon r^2 /2\delta d\alpha $$
 
-$$ S = dC/d\alpha = - \varepsilon_0\varepsilon r**2/2\delta $$
+$$ S = \frac {dC}{d\alpha} = - \varepsilon_0\varepsilon r^2/2\delta $$
 
 #### 平面线位移
 
 #### 圆柱线位移
+
+
+
+
+# 电感式传感器
+
+改变电感量的
+
+分为自感型和互感型
+
+自感分为可变磁阻式和涡流式
+
+互感有差动变压器式
+
+## 可变磁阻式传感器(自感式)
+
+变的磁阻，由线圈、铁心、衔铁组成，铁心和衔铁之间有空隙
+
+磁阻记作 $R_m$
+
+$$ R = \frac{l}{\miu S} $$
+
+电工学知识：
+
+$$ L = \frac{W \phi}{i} $$
+
+欧姆定律
+
+$$ \fai = \frac{iW}{R_m} $$
+
+所以电感量：
+
+$$ L = \frac{W^2}{R_m} $$
+
+W 是线圈匝数
+
+i 是线圈流过的电流
+
+$\phi$ 通过线圈的磁通量
+
+$R_m$ 磁路的总磁阻
+
+$R_m = R_F + R_\delta$ ，其中 $R_F$ 为铁心和衔铁的磁阻，$R_\delta$ 为空气隙磁阻。
+
+改变空气间隙。
+
+如果忽略磁路损耗，因此：
+
+$$ R_m = \frac{2\delta}{\mu_0 A_0} $$
+
+因此
+
+$$ L = \frac{W^2 \mu_0 \A_0 }{2\delta} $$
+
+结论：
+
+L与 $\delta$ 成反比，与 $A_0$ 成正比。
+
+适合测量微小位移量。
+
+## 涡流式传感器（自感）
+
+分为高频反射式和低频透射式
+
+### 优点
+
+非接触测量
+
+灵敏度高
+
+分辨率高
+
+结构简单
+
+## 互感式传感器
 
