Fix LaTeX notation in sensor principles document

--- a/测试工程/传感器及检测原理.md
+++ b/测试工程/传感器及检测原理.md
@@ -205,7 +205,7 @@ $$ S = \frac {dC}{d\alpha} = - \varepsilon_0\varepsilon r^2/2\delta $$
 
 磁阻记作 $R_m$
 
-$$ R = \frac{l}{\miu S} $$
+$$ R = \frac{l}{\mu S} $$
 
 电工学知识：
 
@@ -213,7 +213,7 @@ $$ L = \frac{W \phi}{i} $$
 
 欧姆定律
 
-$$ \fai = \frac{iW}{R_m} $$
+$$ \phi = \frac{iW}{R_m} $$
 
 所以电感量：
 
