--- a/控制工程/信号流图、系统传递函数.md
+++ b/控制工程/信号流图、系统传递函数.md
@@ -28,6 +28,7 @@
 ## 回路
 
 沿着信号流动方向，从节点出发又回来的过程。
+
 ## 互不接触回路
 
 两个回路没有公共支路的也没有公共节点的。
@@ -42,8 +43,50 @@
 
 # 梅森增益公式
 
-作用：无论多复杂的结构图都可以在结构图上把对应的**闭环传递函数**写出。
+作用：无论多复杂的**结构图**都可以在结构图上把对应的**闭环传递函数**写出。
 
 公式：
 
+$$ P=\frac{1}{\Delta} \sum_{k=1}^{n} P_{k} \Delta_{k} $$
+
+$$ \Delta=1-\sum L_{a}+\sum L_{b} L_{c}-\sum L_{d} L_{e} L_{f}+\cdots $$
+
+其中 $\sum L_{a}$ 为所有不同回路增益之和；
+
+$\sum L_{b} L_{c}$ 为所有两两不接触回路增益之和；
+
+$\sum L_{d} L_{e} L_{f}$ 为所有互不接触的回路中，每次取其中三个回路的增益乘积之和；后面的以此类推。
+
+$n$为从输入节点到输出节点的前向通路条数；
+
+$P_{k}$ 为从输入节点到输出节点的第$k$条前向通路的总增益；
+
+$\Delta_{k}$ 为第 $k$ 条前向通路的余子式，即把特征式 $\Delta$ 中与该前向通道相接触的回路增益置零后剩余的部分。
+
+
+# 使用
+
+1.先找出所有的前向通道，再按照通道找回路。一定要明确有几个前向通道。两个相交的回路可能再另一个前向通道中构成回路。前馈通道没有回路。
+
+2.写特征式(分母部分)：
+
+$\Delta$ = 1 - 所有回路的所有增益相乘的相加(回路里面的负号也算) + 两两互不接触的回路 - 三个互不接触的回路
+
+找互不接触的回路要按顺序来，1对234，2对34的来看。
+
+3.分子部分( $\sum_{k=1}^{n}$ )：
+
+n 是前向通道的数量。
+
+$p_k$  是第k个前向通道的总增益(前向通道的所有增益相乘)。
+
+$\Delta$ 是与前向通道对应的余子式：
+
+余子式是：与该前向通道接触的回路全部删去所剩下的。
+
+$\Delta$ = 1 - 所有与前向通道无关的回路的所有增益相乘的相加(回路里面的负号也算)。
+
+# 如果规定只能用结构图等效变换的方法解决复杂的结构图，怎么办：
+
+结构图等效变换。
 
