--- a/控制工程/结构图及其等效变换.md
+++ b/控制工程/结构图及其等效变换.md
@@ -82,7 +82,7 @@ $$ \frac{C(s)}{R(s)} = \frac{G(s)}{1 -+ G(s) H(s)} $$
 
 ## 比较点之间的移动，引出点之间的移动：
 
-在同一个局部中，前后可以互换
+在同一个局部中，前后可以互换，直接套用前移后移的知识。
 
 ## 比较点和引出点之间的互换：(谨慎使用)
 
