Update section headers and add content on transfer functions

--- a/控制工程/信号流图、系统传递函数.md
+++ b/控制工程/信号流图、系统传递函数.md
@@ -64,7 +64,7 @@ $P_{k}$ 为从输入节点到输出节点的第$k$条前向通路的总增益；
 $\Delta_{k}$ 为第 $k$ 条前向通路的余子式，即把特征式 $\Delta$ 中与该前向通道相接触的回路增益置零后剩余的部分。
 
 
-# 使用
+## 使用
 
 1.先找出所有的前向通道，再按照通道找回路。一定要明确有几个前向通道。两个相交的回路可能再另一个前向通道中构成回路。前馈通道没有回路。
 
@@ -86,7 +86,32 @@ $\Delta$ 是与前向通道对应的余子式：
 
 $\Delta$ = 1 - 所有与前向通道无关的回路的所有增益相乘的相加(回路里面的负号也算)。
 
-# 如果规定只能用结构图等效变换的方法解决复杂的结构图，怎么办：
+## 如果规定只能用结构图等效变换的方法解决复杂的结构图，怎么办：
 
 结构图等效变换。
+
+---
+
+---
+
+# 信号传递函数
+## 1.开环传递函数
+
+把主反馈信号(最外圈的反馈)打断，从头到尾的增益乘积，所得到的传递函数是开环传递函数。
+
+$$ G(s) N(s) = \frac{B(s)}{E(s)} = G_1(s)G_2(s)H(s) $$
+
+## 2.输入r(t)作用下的闭环传递函数
+
+梅森公式求解
+
+## 3.干扰n(t)作用下的闭环传递函数
+
+梅森公式
+
+## 4.系统总的输出C(s)和误差E(s)（叠加原理）
+
+输入输出+干扰输出
+
+输入误差+干扰误差
 
