--- a/流体力学/第三章液体一元恒定总流基本原理.md
+++ b/流体力学/第三章液体一元恒定总流基本原理.md
@@ -42,13 +42,17 @@
 
 同一质点的流速的大小和方向都不随时间变化。
 
-不存在惯性力，只多了
+不存在惯性力，比静止流体受力只多了黏滞阻力。（在过流断面只考虑压力和重量的平衡）
 
 断面上的压强服从水静力学规律。
 
 ## 不均匀流
 
 同一质点的流速大小方向随时间变化。
+
+分为渐变流动和急变流动
+
+渐变流动可近似按照均匀流处理。
 
 ## 流线
 
@@ -107,21 +111,55 @@ $$ v = \frac{Q_v}{A} $$
 
 认为流体的流量是守恒的，前一个断面的质量流量等于后一个断面的质量流量。
 
+可压缩流体连续方程：
+
 $$ Q_{m1} =  Q_{m2} $$
+
+$$ \rho_1 Q_{v1} = \rho_2 Q_{v2} $$
+
+不可压缩流体连续方程：
+
+$$ Q_{v1} =  Q_{v2} $$
+
+$$ v_1 A_1 = v_2 A_2 $$
 
 在不可压缩流体中，平均流速于断面面积成反比。
 
+$$ v_1 : v_2 : v_3 : v_4 = \frac{1}{A_1} : \frac{1}{A_2} : \frac{1}{A_3} : \frac{1}{A_4} $$
 
 # 恒定元流能量方程
 
-理想不可压缩流体(伯努利方程)(不考虑黏性)
+理想不可压缩流体(伯努利方程)(不考虑黏性、衰减)
 
 前后两个断面的能量守恒。
 
-压能+位能+动能 = 常数
+对元流任意截面：压能+位能+动能 = 常数
 
-$$ \frac{P_1}{}
+$$ \frac{P_1}{\rho g} + Z_1 + \frac{u^2_1}{2g} = \frac{P_2}{\rho g} + Z_2 + \frac{u^2_2}{2g} $$
+
+其中：
+
+z是位置水头
+
+$\frac{P_1}{\rho g}$ 是压强水头
+
+$\frac{u^2_1}{2g}$ 是流速水头
+
+$\frac{P_1}{\rho g} + Z_1 + \frac{u^2_1}{2g}$ 是总水头
+
+## 比托管的应用
 
 
+# 恒定总流能量方程式
 
-# 动量方程
+两端面流量如果分出，哪能量方程形式并不改变。
+
+## 能量方程的应用
+
+如果断面取在管流出口以后，断面各点压强可假定均匀分布，并且都等于外界大气压强。
+
+### 文丘里流量计
+
+### 总水头线和测压管水头线
+
+总水头 = 测压管水头 + 流速水头
