Add energy and momentum equations in fluid mechanics
Added detailed explanations of energy equations, applications, and momentum equations in fluid mechanics.

--- a/流体力学/第三章液体一元恒定总流基本原理(下).md
+++ b/流体力学/第三章液体一元恒定总流基本原理(下).md
@@ -1,1 +1,99 @@
-# 
+# 恒定总流能量方程式
+
+两端面流量如果分出，哪能量方程形式并不改变。
+
+$$ \frac{P_1}{\rho g} + Z_1 + \frac{\alpha_1 u^2_1}{2g} = \frac{P_2}{\rho g} + Z_2 + \frac{\alpha_2 u^2_2}{2g} + h_{l1-2} $$
+
+其中：
+
+z是位置水头
+
+$\frac{P_1}{\rho g}$ 是压强水头
+
+$\frac{u^2_1}{2g}$ 是流速水头
+
+$\frac{P_1}{\rho g} + Z_1 + \frac{u^2_1}{2g}$ 是总水头
+
+$\alpha$ 是动能修正系数，一般取1.
+
+$h_{l1-2}$ 是水头损失，是由沿着管长均匀发生的均匀流损失(沿程损失)；局部障碍引起的急变流损失(局部损失)组成。
+
+选取断面在**渐变层**，没有输入输出流量。
+
+## 能量方程的应用
+
+如果断面取在管流出口以后，断面各点压强可假定均匀分布，并且都等于外界大气压强。
+
+1.分析流动
+
+2.划分断面
+
+3.选择基准
+
+4.写出方程
+
+### 文丘里流量计
+
+### 总水头线和测压管水头线
+
+总水头 = 测压管水头 + 流速水头 
+
+总水头线是沿水流逐段减去水头损失绘制的。
+
+理想状态是水平线；沿程损失是倾斜缓慢下降；局部损失是垂直断层下降。
+
+# 恒定气流方程
+
+对于液体，方程中绝对相对压强都可。
+
+对于气体，必须考虑高度差异导致的大气压强不同。
+
+绝对气压公式：
+
+$$ P_1 + \rho g Z_1 + \frac{\rho v^2_1}{2} = P_2 + \rho g Z_2 + \frac{\rho v^2_2}{2} + p_{l1-2} $$
+
+相对气压公式：
+
+$$ P_1 + g (\rho_a - \rho) (Z_2 - Z_1) + \frac{\rho v^2_1}{2} = P_2 + \frac{\rho v^2_2}{2} + p_{l1-2} $$
+
+
+P1 表示静压
+
+$\frac{\rho v^2_1}{2}$ 动压
+
+$g (\rho_\alpha - \rho) (Z_2 - Z_1)$ 是位压
+
+ $P_1 + g (\rho_a - \rho) (Z_2 - Z_1) + \frac{\rho v^2_1}{2}$ 是总压
+
+全压 = 动压 + 静压
+
+势压 = 动压 + 位压
+
+ 气流方向与实际作用方向相同时，位压为正。
+
+ # 恒定动量方程
+
+## 恒定流动量方程
+
+前后的动量差 = 流体的外力受力之和。
+
+通用公式：
+
+$$ \Sigma F =\alpha_{2} \rho_2 Q_{v2} v_{2} - \alpha_{1} \rho_1 Q_{v1} v_{1} $$
+
+对应不可压缩流体，密度不变，连续性方程不变：
+
+$$ \alpha_{2} \rho_2 Q_{v2} v_{2} $$
+
+## 解题步骤
+
+1.选用控制体
+
+2.选坐标系
+
+3.明确动量差，应用连续性方程
+
+4.受力分析
+
+5.联立动量方程
+
