Fix equation formatting in 带传动.md
Corrected the formatting of the maximum effective tension equation in the document.

--- a/机械设计/带传动.md
+++ b/机械设计/带传动.md
@@ -75,7 +75,7 @@ $$ F_1 = F_2*e^{f\alpha} $$
 
 最大有效拉力：
 
-$$ F_e = 2F_0*（e^{f\alpha} - 1）/（e^{f\alpha} + 1) $$
+$$ F_e = 2F_0* \frac{(e^{f\alpha} - 1)}{(e^{f\alpha} + 1)} $$
 
 
 ### 应力分析(离心应力、拉应力、弯曲应力)(一离二拉三弯)
