--- a/机械设计/带传动.md
+++ b/机械设计/带传动.md
@@ -66,7 +66,7 @@ $$ P = \frac{F_e V}{1000} $$
 
 ### 推导($F_1、F_2、F_0、F_e$受力平衡分析)
 
-$$ F1 = F0 + \frac{F_e}{2}， F2 = F0 - \frac{F_e}{2} $$
+$$ F_1 = F0 + \frac{F_e}{2}， F_2 = F_0 - \frac{F_e}{2} $$
 
 ### 带传动最大的有效拉力
 欧拉公式，当带轮传动到达打滑临界条件，F1F2的关系式：
@@ -80,57 +80,119 @@ $$ F_e = 2F_0* \frac{(e^{f\alpha} - 1)}{(e^{f\alpha} + 1)} $$
 
 ### 应力分析(离心应力、拉应力、弯曲应力)(一离二拉三弯)
 
-拉应力： $\frac{F1}{A}, \frac{F2}{A}$ (A带的横截面积)
+拉应力： $\sigma_1 = \frac{F_1}{A}, \sigma_2 = \frac{F_2}{A}$ (A带的横截面积)
 
-离心应力： $\frac{qv^2}{A}$ (q单位长度的质量)
+离心应力： $\sigma_c = \frac{qv^2}{A}$ (q单位长度的质量)
 
-弯曲应力： 带轮直径越小，弯曲应力越大；带轮越高，弯曲应力越大
+弯曲应力： 
+
+$$ \sigma_{b_1} \approx E \frac{h}{d_{d_1}} $$
+
+$$ \sigma_{b_2} \approx E \frac{h}{d_{d_2}} $$
+
+带轮直径越小，弯曲应力越大；带轮越高，弯曲应力越大
 
 ## 带的弹性滑动与打滑
 
-带的弹性变形所导致的带与带轮之间的相对运动，称为弹性滑动。(不要说成造成现象的本质原因)
+带的弹性变形所导致的带与带轮之间的相对运动，称为弹性滑动。(定义)(不要说成造成现象的本质原因)
 
-导致从动轮V2 < 主动轮V1
+本质原因：带传动工作中，从紧边到松边，传动带受到的拉力是变化的，因此带的弹性变形也是变化的。
 
-滑动率(和干度定义类似)：
+弹性滑动导致从动轮圆周速度V2 < 主动轮圆周速度V1
+
+滑动率$\varepsilon$(速度降低的程度)：
+
+$$ \varepsilon = \frac{v_1 - v_2}{v_1} * 100% $$
+
+$$ v_2 = (1 - \varepsilon) v_1 $$
+
+其中：
+
+$$ v_1 = \frac{\pi d_{d_1} n_1}{6000}(m/s) $$
+
+$$ v_2 = \frac{\pi d_{d_2} n_2}{6000}(m/s) $$
+
+因此，传动比为：
+
+$$ i = \frac{n_1}{n_2} = (1 - \varepsilon)\frac{d_{d_2}}{d_{d_1}} $$
 
 
 带的传动比不是恒定的，和滑动率有关。
 
 同步带可以解决带传动比的变化。
 
-当工作载荷超过临界值时，发生打滑现象。
+当工作载荷超过临界值$F_{ec}$时，发生打滑现象。
 
 ## V带的设计
 
-两种失效形式：打滑、疲劳破坏
+两种失效形式：**打滑、疲劳破坏**
 
-要保证不打滑、有足够的疲劳强度(这两个相互矛盾)
+要保证不打滑(加大F_0)、有足够的疲劳强度(减小F_0)(这两个相互矛盾)
 
-公式：
+要满足两个条件的功率公式为：
 
-P0 = 
+$$ P_0 = \frac{F_e v}{1000} = ([\varepsilon] - \varepsilon_{b_1} - \varepsilon) (1 - \frac{1}{e^{f_v \alpha_1}}) \frac{A v}{1000} KW $$
 
-P0是基本额定功率，需要修正
+其中：
+
+拉应力： $\sigma_1 = \frac{F_1}{A}$ (A带的横截面积)
+
+离心应力： $\sigma_c = \frac{qv^2}{A}$ (q单位长度的质量)
+
+弯曲应力： 
+
+$$ \sigma_{b_1} \approx E \frac{h}{d_{d_1}} $$
+
+
+## 但是，P0是基本额定功率，是理想情况，需要修正
 
 修正公式(查表)：
 
-Pr = 
+$$ P_r = (P_0 + \Delta P_0) * K_\alpha * K_L $$ 
 
+其中：
+
+\Delta P_0 是当传动比不为1时，单根v带传递动力的增量；
+
+K_\alpha  是当包角不为180°时的修正系数；
+
+K_L    是当带长不等于试验规定的特定长度时的修正系数。
 
 ### 设计顺序(了解即可)
 
-1确定计算功率Pca
+1确定计算功率$P_{ca}$,这是考虑设计v带传动的场合和工况的。
+
+引入$K_A$对名义传动功率P进行修正。
 
 $$ P_{ca} = K_a*P $$
 
 2选择V带型号
 
-根据计算功率Pca和小带轮转速n1决定
+根据计算功率$P_{ca}$和小带轮转速$n_1$决定
 
 3计算小带轮的基准直径和带速
 
-4确定中心距、选择基准长度
+$d_1$不小于表中最小基准直径，取标准系列值。
+
+大带轮直径由公式计算：
+
+$$ d_2 = i d_1 $$
+
+通常情况下，带速在$5m/s \sim 25m/s$之间最适宜。
+
+最佳带速为$10m/s \sim 20m/s$
+
+4确定中心距(a_0)、选择基准长度$L_{d_0}$:
+
+$$ 0.7 (d_2 + d_1) \len a_0 \len 2 (d_2 + d_1) $$
+
+$$L_{d_0} = 2a_0 + \frac{\pi}{2} \frac{(d_1 + d_2) + (d_2 - d_1)^2}{4a_0}$$
+
+$$L_{d_0}$查表，按照相近值确定带的基准长度$L_d$.
+
+确定中心距：
+
+$$ a \approx a_0 + \farc{L_d - L_{d_0}}{2} $$
 
 ## V带张紧、安装、防护
 
