Fix LaTeX formatting in 带传动.md

--- a/机械设计/带传动.md
+++ b/机械设计/带传动.md
@@ -184,7 +184,7 @@ $$ d_2 = i d_1 $$
 
 4确定中心距(a_0)、选择基准长度$L_{d_0}$:
 
-$$ 0.7 (d_2 + d_1) \len a_0 \len 2 (d_2 + d_1) $$
+$$ 0.7 (d_2 + d_1) \le a_0 \le 2 (d_2 + d_1) $$
 
 $$L_{d_0} = 2a_0 + \frac{\pi}{2} \frac{(d_1 + d_2) + (d_2 - d_1)^2}{4a_0}$$
 
@@ -192,7 +192,7 @@ $$L_{d_0}$查表，按照相近值确定带的基准长度$L_d$.
 
 确定中心距：
 
-$$ a \approx a_0 + \farc{L_d - L_{d_0}}{2} $$
+$$ a \approx a_0 + \frac{L_d - L_{d_0}}{2} $$
 
 ## V带张紧、安装、防护
 
