--- a/机械设计/带传动.md
+++ b/机械设计/带传动.md
@@ -131,7 +131,7 @@ $$ i = \frac{n_1}{n_2} = (1 - \varepsilon)\frac{d_{d_2}}{d_{d_1}} $$
 
 要满足两个条件的功率公式为：
 
-$$ P_0 = \frac{F_e v}{1000} = ([\varepsilon] - \varepsilon_{b_1} - \varepsilon) (1 - \frac{1}{e^{f_v \alpha_1}}) \frac{A v}{1000} KW $$
+$$ P_0 = \frac{F_e v}{1000} = ([\sigma] - \sigma_{b_1} - \sigma) (1 - \frac{1}{e^{f_v \alpha_1}}) \frac{A v}{1000} KW $$
 
 其中：
 
@@ -178,9 +178,9 @@ $d_1$不小于表中最小基准直径，取标准系列值。
 
 $$ d_2 = i d_1 $$
 
-通常情况下，带速在$5m/s \sim 25m/s$之间最适宜。
+通常情况下，带速在 $5m/s \sim 25m/s$ 之间最适宜。
 
-最佳带速为$10m/s \sim 20m/s$
+最佳带速为 $10m/s \sim 20m/s$
 
 4确定中心距(a_0)、选择基准长度$L_{d_0}$:
 
