--- a/控制工程/一阶二阶系统的时间响应和动态性能.md
+++ b/控制工程/一阶二阶系统的时间响应和动态性能.md
@@ -37,7 +37,7 @@
 
 **超调量**--峰值超出稳态值的百分比(反应平稳性)
 
-$$ \sigma = \frac{h(tp) - h(\infty)}{h(infty)} * 100% $$
+$$ \sigma = \frac{h(tp) - h(\infty)}{h(\infty)} * 100% $$
 
 **调节时间** -- 保持在终值 $\pm$ 5% 误差带所需时间(迅速程度)
 
@@ -72,7 +72,7 @@ $$ \dot{h}(t) = \frac{1}{T} e^{-\frac{1}{T} t} $$
 
 $$ h(0) = 0;$$
 
-h(\infty) = 1;$$
+$$h(\infty) = 1;$$
 
 $$\dot{h}(0) = \frac{1}{T} $$
 
