--- a/机械设计/链传动.md
+++ b/机械设计/链传动.md
@@ -65,6 +65,8 @@ $$ v = R_1\omega_1\cos\gamma $$
 
 $$ \frac{-180}{z_2} \leq \gamma \leq \frac{180}{z_2} $$
 
+$$ i_s = \frac{\omega_1}{\omega_2} = \frac{R_1 \cos(\gamma)}{R_2 \cos(\beta)} $$
+
 无论如何，水平分速度要相等。
 
 节距越大，齿数越少，链速变化越大。(多边形效应)
@@ -73,15 +75,57 @@ $$ \frac{-180}{z_2} \leq \gamma \leq \frac{180}{z_2} $$
 
 ## 链的失效形式
 
-1.磨损
+1.铰链磨损
 
-2.疲劳破坏
+2.链板疲劳破坏
 
-3.冲击疲劳破坏
+3.滚子套筒冲击疲劳破坏
 
-4.胶合
+4.铰链胶合
 
-5.过载断链(低速时易出现)
+5.铰条过载断链(低速时易出现)。
+
+动载荷只能减轻不能消除。
+
+## 链传动的运动特性
+
+链传动中，链条包在链轮上如同包在两个正多边形的轮子上，正多边形的边长等于链条的节距p。
+
+$$ v = \frac{n_1 z_1 p}{60 * 1000} = \frac{n_2 z_2 p}{60 * 1000} $$
+
+其中：
+
+v是水平分速度
+
+$z_1,z_2$ 分别为主、从动轮的齿数
+
+$n_1,n_2$ 分别为主、从动轮的转速 r/min
+
+平均传动比：
+
+$$ i = \frac{n_1}{n_2} = \frac{z_2}{z_1} $$
+
+铰链条A点的前进分速度：
+
+$$ v_x = R_1 \omega_1 \cos(\beta) $$
+
+$$ v_y = R_1 \omega_1 \sin(\beta) $$
+
+分析可得，链条前进速度和上下抖动速度是周期变化的。
+
+链轮节距越大，齿数越少，链速变化越大。(多边形效应)
+
+因为从动链轮的角速度为：(基于水平方向分速度相同)
+
+$$ \omega_2 = \frac{v_x}{R_2 \cos(\gamma)} = \frac{R_1 \omega_1 \cos(\beta)}{R_2 \cos(\gamma)} $$
+
+链传动瞬时传动比为：
+
+$$ i = \frac{\omega_1}{omega_2} = \frac{R_2 \cos(\gamma)}{R_1 \cos(\beta)} $$
+
+链传动的不均匀性形成了多边形效应。
+
+### 总结
 
 动载荷只能减轻不能消除。
 
@@ -93,23 +137,29 @@ $$ \frac{-180}{z_2} \leq \gamma \leq \frac{180}{z_2} $$
 
 3.链轮齿数过多
 
-链轮小齿轮<7
+## 参数设计
+
+最少齿数 = 9
+
+链轮小齿轮越大，总尺寸越大，容易发生跳齿脱齿，脱链一般先发生在小链轮上。
 
 大齿轮 $$\leq$$ 150
 
-传动比一般小于6
+链节选择偶数，为了不出现过渡链节，承受附加弯矩的作用。尽量与链节互为质数。
+
+传动比一般小于6，常在2到3.5之间，包角不应小于120°。
 
 ## 链轮布置原则
 
-链轮铅锤地面
+1.链轮必须位于铅锤面内，两链轮共面。
 
-中心线尽量水平，避免铅锤。
+2.中心线可以水平，也可以倾斜(夹角小于45°)；避免铅锤，以防链与下方链齿啮合不良或脱离啮合。
 
-最好紧边在上，松边在下，避免松边下垂量过大阻碍运动
+最好紧边在上，松边在下，避免松边下垂量过大阻碍运动。
 
 张紧方法：
 
-1.调节中心距
+1.调节中心距，控制张紧度
 
 2.张紧轮--自动张紧和定期张紧
 
