--- a/控制工程/一阶二阶系统的时间响应和动态性能.md
+++ b/控制工程/一阶二阶系统的时间响应和动态性能.md
@@ -109,15 +109,29 @@ $$ G(s) = \frac{\omega^2_n}{s(s + 2\xi\omega_n)} $$
 
 $$ K = \frac{\omega_n}{2\xi} $$
 
-闭环函数：
+闭环函数(首一标准型)：
 
 $$ G(s) = \frac{\omega^2_n}{s^2 + 2\xi\omega_n s + \omega^2_n} $$
 
 为了方便讨论：
-先确定\omega_n是常数
+先确定 $\omega_n$ 是常数
 
 二阶系统的特征方程：(解是极点)
 
 $D(s) = s^2 + 2\xi\omega_n s + \omega^2_n = 0$
 
- 
+| 阻尼比范围         | 系统类型 | 特征根性质      | 响应形式（单位阶跃）                                                                                    | 特点          |
+| ------------- | ---- | ---------- | --------------------------------------------------------------------------------------------- | ----------- |
+| **ζ = 0**     | 无阻尼  | 一对纯虚根 ±jωₙ | $y(t) = 1 - \cos(\omega_n t)$                                                                 | 持续等幅振荡，不衰减  |
+| **0 < ζ < 1** | 欠阻尼  | 一对共轭复根     | $y(t) = 1 - \frac{e^{-\zeta\omega_n t}}{\sqrt{1-\zeta^2}} \sin\left(\omega_d t + \phi\right)$ | 衰减振荡，有超调    |
+| **ζ = 1**     | 临界阻尼 | 两个相等负实根    | $y(t) = 1 - (1 + \omega_n t)e^{-\omega_n t}$                                                  | 最快无振荡响应     |
+| **ζ > 1**     | 过阻尼  | 两个不等负实根    | $y(t) = 1 - A_1 e^{s_1 t} - A_2 e^{s_2 t}$                                                    | 缓慢无振荡响应，无超调 |
+
+
+| 阻尼比范围         | 特征根表达式                                               | 根的性质       | 根在复平面位置   |
+| ------------- | ---------------------------------------------------- | ---------- | --------- |
+| **ζ = 0**     | $s = \pm j\omega_n$                                  | 一对纯虚根      | 虚轴上       |
+| **0 < ζ < 1** | $s = -\zeta\omega_n \pm j\omega_n\sqrt{1 - \zeta^2}$ | 共轭复根（左半平面） | 左半平面，成对共轭 |
+| **ζ = 1**     | $s = -\omega_n$（重根）                                  | 两个相等负实根    | 实轴上，重根    |
+| **ζ > 1**     | $s = -\zeta\omega_n \pm \omega_n\sqrt{\zeta^2 - 1}$  | 两个不等负实根    | 实轴上，两个不同点 |
+
