--- a/控制工程/二阶系统的时间响应和动态性能.md
+++ b/控制工程/二阶系统的时间响应和动态性能.md
@@ -42,15 +42,15 @@ $$ G(s) = \frac{\omega^2_n}{s^2 + 2\xi\omega_n s + \omega^2_n} $$
 
 省去复杂的推导，求出来解
 
-$$ T_1 = \frac{1}{\xi\omega_n - \omega_n\sqrt{\xi^2 - 1}}  $$
+$$ \lambda_1 = \xi\omega_n - \omega_n\sqrt{\xi^2 - 1} = \frac{1}{T_1} $$
 
-$$ T_2 = \frac{1}{\xi\omega_n + \omega_n\sqrt{\xi^2 - 1}}  $$
+$$ \lambda_2 = \xi\omega_n + \omega_n\sqrt{\xi^2 - 1} =  \frac{1}{T_2} $$
 
 根据：
 
 $$ \frac{T_1}{T_2} $$
 
-$$ \xi = \frac{1+ \frac{T_1}{T_2} }{2 sqrt{\frac{T_1}{T_2}}} $$
+$$ \xi = \frac{1+ \frac{T_1}{T_2} }{2 \sqrt{\frac{T_1}{T_2}}} $$
 
 查 $\frac{T_1}{T_2} - \frac{t_s}{T_1}$表,求出：
 
