--- a/控制工程/二阶系统的时间响应和动态性能.md
+++ b/控制工程/二阶系统的时间响应和动态性能.md
@@ -42,9 +42,9 @@ $$ G(s) = \frac{\omega^2_n}{s^2 + 2\xi\omega_n s + \omega^2_n} $$
 
 省去复杂的推导，求出来解
 
-$$ \lambda_1 = \xi\omega_n - \omega_n\sqrt{\xi^2 - 1} = \frac{1}{T_1} $$
+$$ \lambda_1 = -\xi\omega_n - \omega_n\sqrt{\xi^2 - 1} = \frac{1}{T_1} $$
 
-$$ \lambda_2 = \xi\omega_n + \omega_n\sqrt{\xi^2 - 1} =  \frac{1}{T_2} $$
+$$ \lambda_2 = -\xi\omega_n + \omega_n\sqrt{\xi^2 - 1} =  \frac{1}{T_2} $$
 
 根据：
 
