--- a/流体力学/第三章液体一元恒定总流基本原理(上).md
+++ b/流体力学/第三章液体一元恒定总流基本原理(上).md
@@ -152,7 +152,7 @@ $\frac{P_1}{\rho g} + Z_1 + \frac{u^2_1}{2g}$ 是总水头
 
 # 恒定总流能量方程式
 
-两端面流量如果分出，哪能量方程形式并不改变。
+两端面流量如果分出，能量方程形式并不改变。
 
 ## 能量方程的应用
 
