--- a/流体力学/第三章液体一元恒定总流基本原理(下).md
+++ b/流体力学/第三章液体一元恒定总流基本原理(下).md
@@ -83,7 +83,7 @@ $$ \Sigma F =\alpha_{2} \rho_2 Q_{v2} v_{2} - \alpha_{1} \rho_1 Q_{v1} v_{1} $$
 
 对应不可压缩流体，密度不变，连续性方程不变：
 
-$$ \alpha_{2} \rho_2 Q_{v2} v_{2} $$
+$$ \Sigma F = \rho Q_{v} (\alpha_{2} v_{2} - \alpha_{1} v_{1}) $$
 
 ## 解题步骤
 
