--- a/控制工程/二阶系统的时间响应和动态性能.md
+++ b/控制工程/二阶系统的时间响应和动态性能.md
@@ -6,6 +6,8 @@ $\xi$ 是阻尼比
 
 $\omega^2_n$ 无阻尼自然频率
 
+开环函数
+
 $$ G(s) = \frac{\omega^2_n}{s(s + 2\xi\omega_n)} $$
 
 开环增益：
@@ -14,7 +16,7 @@ $$ K = \frac{\omega_n}{2\xi} $$
 
 闭环函数(首一标准型)：
 
-$$ G(s) = \frac{\omega^2_n}{s^2 + 2\xi\omega_n s + \omega^2_n} $$
+$$ \phi(s) = \frac{\omega^2_n}{s^2 + 2\xi\omega_n s + \omega^2_n} $$
 
 ## 为了方便讨论：先确定 $\omega_n$ 是常数
 
@@ -36,17 +38,49 @@ $D(s) = s^2 + 2\xi\omega_n s + \omega^2_n = 0$
 | **$\xi$ = 1**     | $s = -\omega_n$（重根）                                  | 两个相等负实根    | 实轴上，重根    |
 | **$\xi$ > 1**     | $s = -\xi\omega_n \pm \omega_n\sqrt{\xi^2 - 1}$  | 两个不等负实根    | 实轴上，两个不同点 |
 
+
+
+---
+
 # 过阻尼和临界阻尼时的性能指标计算 $\xi \ge 1$
 
-$$ G(s) = \frac{\omega^2_n}{s^2 + 2\xi\omega_n s + \omega^2_n} $$
+$$ \phi(s) = \frac{\omega^2_n}{s^2 + 2\xi\omega_n s + \omega^2_n} $$
 
 省去复杂的推导，求出来解
 
-$$ \lambda_1 = -\xi\omega_n - \omega_n\sqrt{\xi^2 - 1} = \frac{1}{T_1} $$
+$$ \lambda_1 = -\xi\omega_n - \omega_n\sqrt{\xi^2 - 1} = -\frac{1}{T_1} $$
 
-$$ \lambda_2 = -\xi\omega_n + \omega_n\sqrt{\xi^2 - 1} =  \frac{1}{T_2} $$
+$$ \lambda_2 = -\xi\omega_n + \omega_n\sqrt{\xi^2 - 1} =  -\frac{1}{T_2} $$
 
+其中：
+
+$$ \omega_n = \frac{1}{\sqrt{T_1 T_2}} $$
+
+$$ \xi = \frac{\frac{1}{T_1} + \frac{1}{T_1}}{2\omega} =  \frac{1 + \frac{T_1}{T_2}}{2\sqrt{\frac{T_1}{T_2}}} = f_1(\frac{T_1}{T_2})$$
+
+
+所以，系统的单位阶跃响应为：
+
+$$ C(s) = \frac{\omega_n^2}{s(s^2 + 2\zeta\omega_n s + \omega_n^2)} = \frac{\omega_n^2}{s(s + \frac{1}{T_1})(s + \frac{1}{T_1})} = \frac{1}{s} + \frac{1}{\frac{T_2}{T_1} - 1} * \frac{1}{s + \frac{1}{T_1}} + \frac{1}{\frac{T_1}{T_2} - 1} * \frac{1}{s + \frac{1}{T_2}} $$  
+
+
+所以：
+
+$$ h(t) =  1 +  \frac{1}{\frac{T_2}{T_1} - 1} * e^{-\frac{1}{T_1} t}  + \frac{1}{\frac{T_1}{T_2} - 1} *   e^{-\frac{1}{T_2} t}  $$
+
+解题：
+
+$$ h(t) =  1 +  \frac{1}{\frac{T_2}{T_1} - 1} * e^{-\frac{1}{T_1} t}  + \frac{1}{\frac{T_1}{T_2} - 1} *   e^{-\frac{1}{T_2} t} =  1 +  \frac{1}{\frac{T_2}{T_1} - 1} * e^{-\frac{1}{T_1} t}  + \frac{1}{\frac{T_1}{T_2} - 1} *   e^{--\frac{T_1}{T_2} \frac{t}{T_1}} = 0.95 $$
+
+$$ \frac{t_s}{T_1} = f_2(\frac{T_1}{T_2}) = f(\xi) $$
+
+
+## 总结
 根据：
+
+$$ \lambda_1 = -\xi\omega_n - \omega_n\sqrt{\xi^2 - 1} = -\frac{1}{T_1} $$
+
+$$ \lambda_2 = -\xi\omega_n + \omega_n\sqrt{\xi^2 - 1} =  -\frac{1}{T_2} $$
 
 $$ \frac{T_1}{T_2} $$
 
@@ -59,3 +93,179 @@ $$ \frac{t_s}{T_1} $$
 最后
 
 $$ t_S = \frac{t_s}{T_1} * T_1 $$
+
+
+
+
+
+
+
+
+---
+
+
+
+
+
+# 欠阻尼状态的性能指标($0 \le \xi < 1$)
+
+$\omega_n\sqrt{1 - \xi^2}$ 是j轴的坐标
+
+$-\xi\omega_n $ 是实轴的位置
+
+$\omega_n$ 是实轴和虚轴的向量长度
+
+$\beta$ 是与实轴正方向的夹角
+
+$\lambda$是极点
+
+(1)欠阻尼的直角坐标系：
+
+ $$s = -\xi\omega_n \pm j\omega_n\sqrt{1 - \xi^2}$$
+
+ (2)极坐标表示：
+
+$ cos{\beta} = \omega_n $
+ 
+
+
+
+欠阻尼二阶系统的极点极坐标表示
+
+1. 标准二阶系统极点（直角坐标）
+   特征方程  
+   $$s^2 + 2\zeta\omega_n s + \omega_n^2 = 0 \quad (0<\zeta<1)$$  
+   解得共轭复极点  
+   $$s_{1,2} = -\zeta\omega_n \pm j\omega_n\sqrt{1-\zeta^2}$$  
+
+2. 极坐标转换
+   模  
+   $$|s| = \omega_n$$  
+
+   阻尼角（与负实轴夹角）  
+   $$\beta = \arccos\zeta$$  
+
+3. 极坐标形式
+   $$s_{1,2} = \omega_n \angle (\pm\beta) = \omega_n\,e^{\pm j(\pi-\beta)}$$
+
+
+
+
+
+## 阶跃函数推导
+
+阶跃响应象函数逐步推导：
+
+
+$$
+C(s)=\phi(s)R(s)=\frac{\omega_n^2}{s(s^2+2\xi\omega_n s+\omega_n^2)}
+$$
+
+$$
+=\frac{(s^2+2\xi\omega_n s+\omega_n^2)-s(s+2\xi\omega_n)}{s(s^2+2\xi\omega_n s+\omega_n^2)}
+$$
+
+$$
+=\frac{1}{s}-\frac{s+2\xi\omega_n}{(s+\xi\omega_n)^2+(1-\xi^2)\omega_n^2}
+$$
+
+$$
+=\frac{1}{s}-\frac{s+\xi\omega_n}{(s+\xi\omega_n)^2+\omega_d^2}
+ -\frac{\xi}{\sqrt{1-\xi^2}}\cdot
+ \frac{\omega_d}{(s+\xi\omega_n)^2+\omega_d^2}
+\quad \left(\omega_d=\omega_n\sqrt{1-\xi^2}\right)
+$$
+
+利用复位移定理
+
+$$
+h(t)=1-e^{-\xi\omega_n t}\cos(\sqrt{1-\xi^2}\,\omega_n t)
+      -\frac{\xi}{\sqrt{1-\xi^2}}e^{-\xi\omega_n t}\sin(\sqrt{1-\xi^2}\,\omega_n t)
+$$
+
+$$
+=1-\frac{e^{-\xi\omega_n t}}{\sqrt{1-\xi^2}}
+  \Bigl[\sqrt{1-\xi^2}\cos(\sqrt{1-\xi^2}\,\omega_n t)
+        +\xi\sin(\sqrt{1-\xi^2}\,\omega_n t)\Bigr]
+$$
+
+$$
+=1-\frac{e^{-\xi\omega_n t}}{\sqrt{1-\xi^2}}
+  \Bigl[\sin\beta\cos(\sqrt{1-\xi^2}\,\omega_n t)
+        +\cos\beta\sin(\sqrt{1-\xi^2}\,\omega_n t)\Bigr]
+\qquad \bigl(\beta=\arccos\xi\bigr)
+$$
+
+$$
+=1-\frac{e^{-\xi\omega_n t}}{\sqrt{1-\xi^2}}
+  \sin\bigl(\sqrt{1-\xi^2}\,\omega_n t+\beta\bigr)
+$$
+
+解得**系统的单位脉冲响应**：
+
+$$
+h(t)=1-\frac{e^{-\xi\omega_n t}}{\sqrt{1-\xi^2}}\sin(\omega_d t+\beta)
+$$
+
+## 求峰值时间$t_p$(先求单位脉冲响应，再求=0的结果时)
+
+$$
+\dot{h}(t) = L^{-1}[\dot{H}(s)] = L^{-1}[K(s)]=\frac{\omega_n}{\sqrt{1-\xi^2}} e^{-\xi\omega_n t} \sin(\omega_n\sqrt{1-\xi^2}t)
+$$
+
+当  k(t) = 0 时
+
+$$ \sin(\omega_n\sqrt{1-\xi^2}t) = 0 $$
+
+解得
+
+$$ \omega_n\sqrt{1-\xi^2} t_p = 0 ,\pi ,2\pi ,3\pi $$
+
+第一个0肯定是信号发生点，第二个是峰值。
+
+$$ t_p = \frac{\pi}{ \omega_n\sqrt{1-\xi^2} } $$
+
+也就是用$\pi$除以虚数。
+
+## 求超调量 $\sigma$
+
+$$ h(t_p)=1-\frac{e^{-\xi\omega_n t_p}}{\sqrt{1-\xi^2}}\sin(\omega_d t_p+\beta) 
+$$
+
+$$
+= 1-\frac{ e^{ \frac{-\xi\pi }{ \sqrt{1-\xi^2} } } } {\sqrt{1-\xi^2}}\sin(\pi +\beta) 
+$$
+
+$$
+= 1 + e^{ \frac{-\xi\pi }{ \sqrt{1-\xi^2} } } $$
+
+$$
+\sigma =  e^{ \frac{-\xi\pi }{ \sqrt{1-\xi^2}}} * 100\% $$
+
+只和阻尼比有关
+
+$$ 超调量 = e^{$\pi$ * \frac{实部}{虚部}} $$
+
+阻尼比越大超调量越小。
+
+## 求调节时间 $t_s$
+
+包络线：
+
+$$ 1 \pm e^{ \frac{-\xi\pi }{ \sqrt{1-\xi^2} } } $$
+
+调节时间：
+
+$$ |e^{ \frac{-\xi\pi }{ \sqrt{1-\xi^2} } }| = 0.05 $$
+
+**工程上用**：
+
+$$ t_s = \frac{3.5}{\xi\omega_n} (0.3 < \xi < 0.8) (\Delta \% = 5\% ) $$ 
+
+## 总结
+
+$$ t_p = \frac{\pi}{ \omega_n\sqrt{1-\xi^2} } $$
+
+$$ \sigma =  e^{ \frac{-\xi\pi }{ \sqrt{1-\xi^2}}} * 100% $$
+
+$$ t_s = \frac{3.5}{\xi\omega_n} (0.3 < \xi < 0.8) (\Delta\% = 5\% ) $$ 
