--- a/流体力学/流体阻力和能量损失.md
+++ b/流体力学/流体阻力和能量损失.md
@@ -1,5 +1,101 @@
 # 沿程损失($h_f$)和局部损失($h_m$)
 
-|名称|定义|特点|计算公式|
-|||||
-|||||
+| 名称 | 定义 | 特点 | 计算公式 |
+| -------- | -------- | -------- | -------- |
+| 沿程损失 | 沿程不变的管段上具有沿程阻力，克服沿程阻力引起的能量损失叫沿程损失 | 沿程损失沿管段均布，与管段的长度成正比，也叫长度损失 | 沿程水头损失： $h_f = \lambda \frac{l}{d} \cdot \frac{v^2}{2g}$ <br>压强损失： $p_f = \rho g h_f$|
+| 局部损失 | 在边界急剧变化的区域存在集中分布的阻力，叫局部阻力,克服局部阻力引起的能量损失叫局部损失。| 引起局部损失的原因是由于旋涡区的产生和速度方向和大小的变化。 | 局部水头损失: $h_f = \xi \cdot \frac{v^2}{2g} $<br>压强损失: $p_m = \rho g h_m$|
+
+整个管路的能量损失等于各管段的沿程损失和局部损失的总和。
+
+# 层流、紊流、雷诺数
+## 两种状态
+
+| 名称 | 定义 | 特点 |
+| -------- | -------- | -------- |
+| 层流 | 各液层毫不相混，分层有规则的流动状态叫做层流。 | 只存在黏性引起的各层间滑动摩擦阻力。|
+| 紊流 | 液体质点的运动轨迹极不规则，各部分流体互相剧烈掺混的流动状态叫做紊流。 | 除了黏性阻力，还存在由于质点掺混，互相碰撞所造成的惯性阻力。|
+
+层流 --> 紊流 为上临界流速，紊流 --> 层流 下临界流速($v_k$)
+
+默认所指临界流速为下临界流速
+
+## 临界雷诺数
+
+雷诺数(判断流态)：
+
+$$ R_e = \frac{v d\rho}{\mu} = \frac{v d}{\nu} $$
+
+临界雷诺数(200 -- 4000)：
+
+$$ R_{eK} = \frac{v_k d}{\nu} = 2000 $$
+
+其中：
+v 是流体流速
+
+$\nu$ 是运动粘度
+
+$\mu$ 是动力粘度
+
+## 流态分析
+
+流态取决于绕动的惯性作用和黏性的稳定作用斗争的结果(谁是主导作用)
+
+## 层流底层
+
+在紊流的流态中，在流管边缘存在极小的区域内存在层流，由于固体壁面的阻滞作用，流速小，惯性力小，依然是层流作用。
+
+存在一个过渡层，紊流核心过渡导层流底层。
+
+随着雷诺数增大，过渡层减小。
+
+# 圆管中层流运动
+
+水力坡度(单位长度的沿程损失)：
+
+$$ J = \frac{h_f}{l} $$
+
+轴向切应力$\tau$与J之间的关系：
+
+$$ \tau = \rho g \frac{r}{2} J $$
+
+圆管均匀流中，切应力与半径成正比，在断面上按**直线规律**分布，轴线上为0，管壁上最大。
+
+沿程阻力系数：
+
+$$ \lambda = \frac{64}{R_e} $$
+
+与管壁的粗糙度无关，只和雷诺数有关。
+
+在圆管层流中，流速是以管中心为轴线的旋转抛物面，即**抛物线规律**。
+
+平均流速等于最大流速的一半：
+
+$$ v = 1/2 u_{max} $$
+
+# 紊流运动的特征和紊流阻力
+## 运动特征
+
+脉动现象：诸如速度、压强等空间点上的物理量随时间的变化作无规则的即随机的变
+动。（时均法统计)
+
+紊流脉动的强弱程度用**紊流度ε**表示。
+
+## 紊流阻力
+
+紊流阻力包括黏性切应力和惯性切应力：
+
+| 名称 | 定义 |
+| -------- | -------- |
+| 黏性切应力 | 因紊流中各流层间的相对运动而产生 |
+| 惯性切应力（雷诺应力） | 因脉动引起的动量交换所产生 |
+
+## 混合长度理论(半经验理论)
+
+雷诺数越大，紊动越剧烈，黏性切应力的影响就越小:
+
+层流时的切应力：黏性切应力
+
+紊流时的切应力：惯性切应力
+
+# 尼古拉兹实验
+## 沿程阻力系数以及影响因素分析
