--- a/流体力学/流体阻力和能量损失.md
+++ b/流体力学/流体阻力和能量损失.md
@@ -1,9 +1,9 @@
-# 沿程损失($h_f$)和局部损失($h_m$)
+# 沿程损失( $h_f$ )和局部损失( $h_m$ )
 
 | 名称 | 定义 | 特点 | 计算公式 |
 | -------- | -------- | -------- | -------- |
 | 沿程损失 | 沿程不变的管段上具有沿程阻力，克服沿程阻力引起的能量损失叫沿程损失 | 沿程损失沿管段均布，与管段的长度成正比，也叫长度损失 | 沿程水头损失： $h_f = \lambda \frac{l}{d} \cdot \frac{v^2}{2g}$ <br>压强损失： $p_f = \rho g h_f$|
-| 局部损失 | 在边界急剧变化的区域存在集中分布的阻力，叫局部阻力,克服局部阻力引起的能量损失叫局部损失。| 引起局部损失的原因是由于旋涡区的产生和速度方向和大小的变化。 | 局部水头损失: $h_f = \xi \cdot \frac{v^2}{2g} $<br>压强损失: $p_m = \rho g h_m$|
+| 局部损失 | 在边界急剧变化的区域存在集中分布的阻力，叫局部阻力,克服局部阻力引起的能量损失叫局部损失。| 引起局部损失的原因是由于旋涡区的产生和速度方向和大小的变化。 | 局部水头损失: $h_f = \xi \cdot \frac{v^2}{2g} $<br>压强损失: $p_m = \rho g h_m$ |
 
 整个管路的能量损失等于各管段的沿程损失和局部损失的总和。
 
@@ -54,7 +54,7 @@ $\mu$ 是动力粘度
 
 $$ J = \frac{h_f}{l} $$
 
-轴向切应力$\tau$与J之间的关系：
+轴向切应力 $\tau$ 与J之间的关系：
 
 $$ \tau = \rho g \frac{r}{2} J $$
 
@@ -70,7 +70,7 @@ $$ \lambda = \frac{64}{R_e} $$
 
 平均流速等于最大流速的一半：
 
-$$ v = 1/2 u_{max} $$
+$$ v = \frac{1}{2} u_{max} $$
 
 # 紊流运动的特征和紊流阻力
 ## 运动特征
@@ -99,3 +99,92 @@ $$ v = 1/2 u_{max} $$
 
 # 尼古拉兹实验
 ## 沿程阻力系数以及影响因素分析
+
+沿程阻尼系数 $\lambda$ ---- $R_e$ 和壁面粗糙(相对粗糙度)
+
+| 名称 | 定义 |
+| -------- | -------- |
+| 层流 | 层流阻力 --- 粘性阻力 $\lambda = \frac{64}{R_e}$  $\lambda$ 仅与 $R_e$ 有关 |
+| 紊流 | 紊流阻力 --- 黏性阻力、惯性阻力； $\lambda$ 和 $R_e$ 、壁面粗糙有关 |
+
+相对粗糙度：
+
+$$ \frac{K}{d} 或 \frac{K}{r_0} $$ 
+
+相对光滑度：
+
+$$ \frac{d}{K} 或 \frac{r_0}{K} $$ 
+
+| 名称 | 范围 | 特点 |
+| -------- | -------- | -------- |
+| 层流区 | $R_e$ < 2000  | $\lambda$ 随 $R_e$ 的增大而减小，与K/d 无关 |
+| 临界区 |  $R_e$ = 2000 - 40000 | $\lambda$ 随 $R_e$ 的增大而增大，与K/d 无关  |
+| 紊流光滑区 |  $R_e$ > 4000 | $\lambda$ 仅与 $R_e$ 有关，与K/d 无关  |
+| 紊流过渡区 |  | $\lambda$ 既与 $R_e$ 有关，又与K/d 有关  |
+| 紊流粗糙区(阻力平方区) |  | $\lambda$ 只与K/d 有关，与 $R_e$ 无关  |
+
+## 沿程阻力系数的测定和阻力分区图
+
+紊流分为三个阻力区，可用层流底层(厚度)的存在来解释
+
+| 紊流光滑区 |   | $\lambda$ 仅与 $R_e$ 有关，与K/d 无关  |
+
+| 紊流过渡区 |  | $\lambda$ 既与 $R_e$ 有关，又与K/d 有关  |
+
+| 紊流粗糙区(阻力平方区) |  | $\lambda$ 只与K/d 有关，与 $R_e$ 无关  |
+
+## 莫迪图
+
+# 非圆管的沿程损失
+
+水力半径：
+
+$$ R = \frac{A}{X} $$
+
+沿程损失和水力半径成反比
+
+X ：过流断面上流体固体壁面接触的周界。(周界越短，水力半径越大)
+
+当量直径:
+
+$$d_e = 4R $$
+
+|  | 圆管 | 矩形断面 | 正方形断面 |
+| -------- | -------- | -------- | -------- |
+| 水力半径 | $\frac{d}{4}$ | $\frac{ab}{2(a+b)}$ | $\frac{a}{4}$ |
+| 当量直径 | | $\frac{2ab}{(a+b)}$ | a |
+
+当量直径在非圆管的雷诺数计算，沿程损失计算、沿程阻力系数计算中相当于圆管直径，但不能用于连续性方程。
+
+# 管流动的局部损失
+## 局部损失的一般分析
+
+局部损失的计算公式：
+
+
+局部损失的阻力系数与雷诺数成反比：
+
+
+局部阻碍
+
+局部阻碍的影响长度：在局部阻碍范围内损失的能量，只占局部损失的一部分，另一部分是在局部阻碍下游一定长度的管段上损耗的。
+
+## 减少阻力的措施
+
+两种途径：
+
+1.改进流体外部的边界
+
+2.在流体内部投加极少量的添加剂，使其影响流体运动的内部结构。
+
+减小紊流局部阻力的着眼点在于防止或推迟流体与壁面的分力，壁面漩涡区的产生或减小漩涡区的大小和强度。
+
+(1)管道进口：平顺的管道进口
+
+(2)渐扩管和突扩管：较小的扩散角
+
+弯管：弯管阻力系数在一定范围内随曲率半径R增大而减小。
+
+三通：减小支管与合流管之间的夹角，或将连接处的折角改缓。
+
+合理衔接：先弯后扩不合理
