--- a/流体力学/流体阻力和能量损失.md
+++ b/流体力学/流体阻力和能量损失.md
@@ -3,7 +3,7 @@
 | 名称 | 定义 | 特点 | 计算公式 |
 | -------- | -------- | -------- | -------- |
 | 沿程损失 | 沿程不变的管段上具有沿程阻力，克服沿程阻力引起的能量损失叫沿程损失 | 沿程损失沿管段均布，与管段的长度成正比，也叫长度损失 | 沿程水头损失： $h_f = \lambda \frac{l}{d} \cdot \frac{v^2}{2g}$ <br>压强损失： $p_f = \rho g h_f$|
-| 局部损失 | 在边界急剧变化的区域存在集中分布的阻力，叫局部阻力,克服局部阻力引起的能量损失叫局部损失。| 引起局部损失的原因是由于旋涡区的产生和速度方向和大小的变化。 | 局部水头损失: $h_f = \xi \cdot \frac{v^2}{2g} $<br>压强损失: $p_m = \rho g h_m$ |
+| 局部损失 | 在边界急剧变化的区域存在集中分布的阻力，叫局部阻力,克服局部阻力引起的能量损失叫局部损失。| 引起局部损失的原因是由于旋涡区的产生和速度方向和大小的变化。 | 局部水头损失: $h_m = \xi \cdot \frac{v^2}{2g} $<br>压强损失: $p_m = \rho g h_m$ |
 
 整个管路的能量损失等于各管段的沿程损失和局部损失的总和。
 
@@ -161,21 +161,36 @@ $$d_e = 4R $$
 
 局部损失的计算公式：
 
+$$ h_m = \xi \frac{v^2}{2g} $$
 
 局部损失的阻力系数与雷诺数成反比：
 
+$$ \xi = \frac{B}{R_e} $$
 
-局部阻碍
+### 局部阻碍
+
+#### 突变
+
+**漩涡区**：在边壁突变的地方，出现主流与边壁脱离的现象，主流与边壁之间形成漩涡区(漩涡区越大，能量损失越大)
+
+#### 渐变
+
+**渐扩管**：减速增压区，在一定的 $R_e$ 范围内，漩涡区的位置及大小与 $R_e$ 有关。
+
+**渐缩管**：减压增速区。不会出现漩涡区。
 
 局部阻碍的影响长度：在局部阻碍范围内损失的能量，只占局部损失的一部分，另一部分是在局部阻碍下游一定长度的管段上损耗的。
 
 ## 减少阻力的措施
 
-两种途径：
+
+**两种途径**：
 
 1.改进流体外部的边界
 
 2.在流体内部投加极少量的添加剂，使其影响流体运动的内部结构。
+
+---
 
 减小紊流局部阻力的着眼点在于防止或推迟流体与壁面的分力，壁面漩涡区的产生或减小漩涡区的大小和强度。
 
@@ -183,8 +198,38 @@ $$d_e = 4R $$
 
 (2)渐扩管和突扩管：较小的扩散角
 
-弯管：弯管阻力系数在一定范围内随曲率半径R增大而减小。
+(3)弯管：弯管阻力系数在一定范围内随曲率半径R增大而减小。
 
-三通：减小支管与合流管之间的夹角，或将连接处的折角改缓。
+(4)三通：减小支管与合流管之间的夹角，或将连接处的折角改缓。
 
-合理衔接：先弯后扩不合理
+(5)合理衔接：先弯后扩不合理
+
+# 总结
+
+## 能量损失分为沿程损失和局部损失：
+
+$$ h_l = h_f + h_m =  \lambda \frac{l}{d} \cdot \frac{v^2}{2g} + \xi \cdot \frac{v^2}{2g} $$
+
+$$ P_l = P_f + P_m =  \rho g h_f + \rho g h_m $$
+
+## 两种流态：层流和紊流
+
+层流
+
+$$ R_{eK} = \frac{v_k d}{\nu} < 2000 $$
+
+紊流
+
+$$ R_{eK} = \frac{v_k d}{\nu} > 2000 $$
+
+## 圆管层流
+
+流速按抛物线分布
+
+断面平均流速：
+
+$$ v = \frac{1}{2} u_{max} $$
+
+沿程阻力系数：
+
+ $$\lambda = \frac{64}{R_e}$$
