--- a/控制工程/二阶系统的时间响应和动态性能.md
+++ b/控制工程/二阶系统的时间响应和动态性能.md
@@ -111,13 +111,13 @@ $$ t_S = \frac{t_s}{T_1} * T_1 $$
 
 $\omega_n\sqrt{1 - \xi^2}$ 是j轴的坐标
 
-$-\xi\omega_n $ 是实轴的位置
+$-\xi\omega_n$ 是实轴的位置
 
 $\omega_n$ 是实轴和虚轴的向量长度
 
 $\beta$ 是与实轴正方向的夹角
 
-$\lambda$是极点
+$\lambda$ 是极点
 
 (1)欠阻尼的直角坐标系：
 
@@ -125,7 +125,7 @@ $\lambda$是极点
 
  (2)极坐标表示：
 
-$ cos{\beta} = \omega_n $
+$$ cos{\beta} = \omega_n $$
  
 
 
@@ -133,19 +133,24 @@ $ cos{\beta} = \omega_n $
 欠阻尼二阶系统的极点极坐标表示
 
 1. 标准二阶系统极点（直角坐标）
-   特征方程  
-   $$s^2 + 2\zeta\omega_n s + \omega_n^2 = 0 \quad (0<\zeta<1)$$  
-   解得共轭复极点  
-   $$s_{1,2} = -\zeta\omega_n \pm j\omega_n\sqrt{1-\zeta^2}$$  
+   特征方程
+    
+   $$s^2 + 2\zeta\omega_n s + \omega_n^2 = 0 \quad (0<\zeta<1)$$
 
-2. 极坐标转换
-   模  
+   解得共轭复极点
+   
+   $$s_{1,2} = -\zeta\omega_n \pm j\omega_n\sqrt{1-\zeta^2}$$
+   
+3. 极坐标转换
+   模
+     
    $$|s| = \omega_n$$  
 
-   阻尼角（与负实轴夹角）  
-   $$\beta = \arccos\zeta$$  
-
-3. 极坐标形式
+   阻尼角（与负实轴夹角）
+   
+   $$\beta = \arccos\zeta$$
+   
+5. 极坐标形式
    $$s_{1,2} = \omega_n \angle (\pm\beta) = \omega_n\,e^{\pm j(\pi-\beta)}$$
 
 
@@ -207,7 +212,7 @@ $$
 h(t)=1-\frac{e^{-\xi\omega_n t}}{\sqrt{1-\xi^2}}\sin(\omega_d t+\beta)
 $$
 
-## 求峰值时间$t_p$(先求单位脉冲响应，再求=0的结果时)
+## 求峰值时间 $t_p$ (先求单位脉冲响应，再求=0的结果时)
 
 $$
 \dot{h}(t) = L^{-1}[\dot{H}(s)] = L^{-1}[K(s)]=\frac{\omega_n}{\sqrt{1-\xi^2}} e^{-\xi\omega_n t} \sin(\omega_n\sqrt{1-\xi^2}t)
@@ -269,3 +274,15 @@ $$ t_p = \frac{\pi}{ \omega_n\sqrt{1-\xi^2} } $$
 $$ \sigma =  e^{ \frac{-\xi\pi }{ \sqrt{1-\xi^2}}} * 100% $$
 
 $$ t_s = \frac{3.5}{\xi\omega_n} (0.3 < \xi < 0.8) (\Delta\% = 5\% ) $$ 
+
+## 最佳阻尼比 $\xi = 0.707$
+
+$\xi = 0.707$时，此时 $\beta = 45°$
+
+如果令实部 $\xi\omega_n = C$ 为常数：
+
+此时精确定义的 $t_s$ 是最短的。
+
+如果令实部 $\omega_n = C$ 为常数：
+
+此时精确定义的 $t_s$ 依然是最短的。
