--- a/控制工程/二阶系统的时间响应和动态性能.md
+++ b/控制工程/二阶系统的时间响应和动态性能.md
@@ -59,7 +59,7 @@ $$ \omega_n = \frac{1}{\sqrt{T_1 T_2}} $$
 $$ \xi = \frac{\frac{1}{T_1} + \frac{1}{T_1}}{2\omega} =  \frac{1 + \frac{T_1}{T_2}}{2\sqrt{\frac{T_1}{T_2}}} = f_1(\frac{T_1}{T_2})$$
 
 
-所以，系统的单位阶跃响应为：
+所以，系统的**单位阶跃响应**为：
 
 $$ C(s) = \frac{\omega_n^2}{s(s^2 + 2\zeta\omega_n s + \omega_n^2)} = \frac{\omega_n^2}{s(s + \frac{1}{T_1})(s + \frac{1}{T_1})} = \frac{1}{s} + \frac{1}{\frac{T_2}{T_1} - 1} * \frac{1}{s + \frac{1}{T_1}} + \frac{1}{\frac{T_1}{T_2} - 1} * \frac{1}{s + \frac{1}{T_2}} $$  
 
@@ -90,7 +90,7 @@ $$ \xi = \frac{1+ \frac{T_1}{T_2} }{2 \sqrt{\frac{T_1}{T_2}}} $$
 
 $$ \frac{t_s}{T_1} $$
 
-最后
+最后**调节时间**：
 
 $$ t_S = \frac{t_s}{T_1} * T_1 $$
 
@@ -230,7 +230,7 @@ $$ \omega_n\sqrt{1-\xi^2} t_p = 0 ,\pi ,2\pi ,3\pi $$
 
 $$ t_p = \frac{\pi}{ \omega_n\sqrt{1-\xi^2} } $$
 
-也就是用$\pi$除以虚数。
+也就是用 $\pi$ 除以虚数。
 
 ## 求超调量 $\sigma$
 
@@ -286,3 +286,6 @@ $\xi = 0.707$时，此时 $\beta = 45°$
 如果令实部 $\omega_n = C$ 为常数：
 
 此时精确定义的 $t_s$ 依然是最短的。
+
+# 位置变化的分布规律
+
