--- a/测试工程/第三章.测试系统特性.md
+++ b/测试工程/第三章.测试系统特性.md
@@ -1,1 +1,122 @@
+# 测试系统
 
+被测对象 -- 传感器 --- 信号调理 --- 信号处理 --信号记录显示
+
+输出信号质量一定不好于输出信号
+
+受测试系统特性影响。
+
+受信号传输过程干扰。
+
+能否准确测量，取决于测量装置的特性，一般简称为特性。
+
+包括：静态和动态特性
+
+# 静态特性
+
+x(t)输入
+
+y(t)输出
+
+h(t)系统传递函数
+
+三者可以互相求解。
+
+## 要满足条件
+
+单值性、线性关系最佳。
+
+# 线性系统的数学描述
+
+定常时不变线性系统：
+
+
+## 主要性质
+
+(叠加性)
+复杂输入可分解为各简单输入之和分析
+
+比例性
+
+微分性
+
+积分特性
+
+频率保持性：
+
+输入信号频率和输出信号频率前后不变
+
+# 静态特性
+
+静态特性☞信号为定值或缓慢变化时，输出于输入的关系。
+
+## 非线性误差
+
+测试系统输出与输入保持线性关系的程度。
+
+测试中，x-y曲线为**定度曲线**或**定标曲线**。
+
+用一条反映定度数据的一般趋势而误差绝对值最小的直线作为参考直线，称为拟合直线。
+
+非线性误差：定度曲线偏离拟合直线的程度。
+
+即在系统满量程输出内，定度曲线和拟合直线的最大偏差的百分比。
+
+$$ \delta = \frac{\Delta L_{max}}{Y_{FS}} $$
+
+其中：
+
+$\delta$  非线性度
+
+$Y_{FS}$ 满量程
+
+$\Delta L_{max}$ 最大偏差
+
+## 拟合直线的确定方法
+
+端基直线：起点终点相连。
+
+独立直线：最小二乘法计算。
+
+## 灵敏度
+
+系统对输入信号变化的反映能力。
+
+定义为：
+
+$$ S = \frac{\Delta y}{\Delta x} $$
+
+通常用理想直线的斜率为测量装置的灵敏度
+
+灵敏度的单位取决于输入输出量的单位
+
+灵敏度越高，测量范围越窄，测量系统的稳定性越差。(极小的输入产生一个较大的输出，使得测量量程受限)
+
+## 分辨力
+
+能检测的最小变化量，通常以最小单位输出量所对应的输入量表示。
+
+注意：分辨率越高，检测输入量的最小变化量越小。
+
+## 回程误差
+
+又叫迟滞，表征测量系统在全量程范围内，输入量由小到大或由大到小两者静态特性不一致的程度。
+
+$$ \delta_H = \frac{\Delta H_{max}}{y_{FS}} $$
+
+$\delta_H$ 越小，性能越好
+
+## 漂移
+漂移
+
+点漂
+
+零漂
+
+## 重复性
+
+多次测量，结果能否一样。
+
+正反行程最大偏差与满量程输出的百分比来表示：
+
+$$ \eta = \frac{\Delta_{max}}{Y_{FS}} $$
