--- a/流体力学/流体静力学上.md
+++ b/流体力学/流体静力学上.md
@@ -37,4 +37,126 @@ $$ Z + \frac{p}{\rho g} = C $$
 
 ## 分界面和自由面
 
-分界面为两种密度不同互不相混合的液体间的静止状态下的分界面
+| 名称 | 定义 | 特点 |
+| -------- | -------- | -------- |
+| 分界面 | 为两种密度不同互不相混合的液体间的静止状态下的分界面。 | 既是水平面又是等压面 |
+| 自由面 | 静止液体与气体接触的面叫自由面，受到相同的气体压强 | 是分界面的一种特殊形式，既是水平面又是等压面 |
+
+### 液体静压强只适合静止、同种、连续的液体
+
+如果同一容器或同一连通器盛有多种不同密度的液体，要从某一种液体中某一点已知压强求另一种液体中另一点未知压强，必须先求出两个液体间分界面的压强。
+
+## 气体压强计算
+
+可以忽略液柱影响。气体压强处处相等
+
+## 等密面是水平面
+
+静止非均质流体的水平面是等压面、等密面和等温面。
+
+# 压强的计算基准和度量单位
+## 两种计算基准
+
+分为绝对压强和相对压强
+
+$$ P= P' - P_a $$
+
+P':绝对压强
+
+P:相对压强
+
+$P_a$ 大气压强
+
+$P_v$ 真空度
+
+绝大部分测量压强的仪表(表压)一般多采用相对压强。
+
+# 测压计
+
+测压管
+
+压差计
+
+微压计
+
+# **作用于平面的液体压力**
+## 解析法
+
+受压平面的水静压力：
+
+$$ P = \rho g h_c A = P_c A $$
+
+即作用在任意位置、任意形状平面上的水静压力值等于受压面面积与其形心点所受水静压强的乘积。
+
+水静压力的方向沿着受压面的内法线方向，其作用点(压力中心)D在y轴上的位置是低于形心C的。
+
+压力中心D的位置计算：
+
+$$ y_D = y_c + \frac{I_c}{y_c \cdot A} $$
+
+一般直接求 $y_e = y_D - y_c = \frac{I_c}{y_c \cdot A}$
+
+如果容器封闭，液面压强大于或小于大气压强，则应以相对压强为0的虚设液面作为计算液面求解。
+
+假设液面和容器的实际液面的距离为 $\frac{|p_0 - P_a|}{\rho g}$ 。
+
+$p_0 > P_a$ 虚设液面在实际液面上方
+
+$p_0 < P_a$ 虚设液面在实际液面下方
+
+$P = \rho g h_c A$ -- $h_c$ 取平面形心至虚设液面的距离
+
+$y_e = y_D - y_c = \frac{I_c}{y_c \cdot A}$ -- $y_c$ 取平面形心沿y轴1方向至虚设液面的距离
+
+# 图解法(只适用于矩形平面)
+
+$$ P = Sb = V $$
+
+作用于平面的水静压力等于压强分布图形的体积。
+
+# 作用于曲面的液体压力
+
+求曲面水静压力，一般分为水平方向和铅直方向的分力分别进行计算：
+
+| 名称 | 定义 |
+| -------- | -------- |
+| 水平方向分力 | $P_x = \rho g h_c A_z$ |
+| 铅锤方向分力 | $P_z = \rho g V$ | 
+| 合力 | $P = sqrt{P_x^2 + P_z^2}$ <br> $\zeta = \arctan( \frac{P_z}{P_x} )$ |
+
+无论是潜体还是浮体，水平分压力均为0.
+
+潜体的受压曲面是物体表面的封闭曲面，没有受压曲面的边界线，铅直投影面积为0.
+
+浮体的受压曲面虽不封闭，但受压曲面边界线在同一水平面上，所以铅直投影面积1也为0.
+
+# 流体平衡微分方程式及其积分
+## 欧拉平衡方程
+
+
+物理意义：当流体处于平衡状态时，作用在单位质量流体上的质量力与压力的合力平衡。
+
+方程的另一形式：
+
+$$ dp = \rho (Xdx + Ydy + Zdz) $$
+
+## 等压面及其特性
+等压面就是等势面。
+
+等压面的特性：等压面始终和质量力正交。
+
+# 液体的相对平衡
+
+液体质点之间，及质点与器壁之间都没有相对运动，这种运动称为相对平衡。
+
+## 等加速度直线运动中的平衡
+
+液体自由面方程：
+
+$$ z = - \frac{a}{g} x $$
+
+## 容器等角速度旋转的液体平衡
+
+自由面方程：
+
+$$ z_1 = - \frac{\omega^2 r^2}{2g} $$
