Update signal classification definitions and methods
Clarified definitions and methods for signal classification.

--- a/测试工程/第二章：信号分类.md
+++ b/测试工程/第二章：信号分类.md
@@ -55,17 +55,19 @@
 
 - ## 非周期信号
 
+判断方法：若干信号中，至少有两个信号的频率之比不是有理数。
+
   - ### 准周期信号
 
     由多个乃至无穷多个单周期信号叠加，但是不存在公共周期。
 
-判断方法：若干信号中，至少有两个信号的频率之比不是有理数。
 
-### 瞬变信号
 
-在有限时间存在，随时间增加幅值衰减至0。
+  - ### 瞬变信号
 
-如单位脉冲函数。
+    在有限时间存在，随时间增加幅值衰减至0。
+
+    如单位脉冲函数。
 
 
 
