Add section on Fourier transform in chapter two
Added content about Fourier transform and non-periodic signals.

--- a/测试工程/第二章：非周期信号与离散频谱.md
+++ b/测试工程/第二章：非周期信号与离散频谱.md
@@ -1,1 +1,10 @@
-# 
+# 傅里叶变换
+
+非周期信号可以看作周期信号 $T_0$ 趋于无穷大的周期信号。
+
+周期信号的频谱间隔无线接近，变为连续谱。
+
+经过变换后，x(t) 函数变为 x($\omega$)
+
+$$ x($\omega$) = \sum $$
+
