Enhance chapter on non-periodic signals and spectra
Added detailed explanations and properties of Fourier transforms and non-periodic signal spectra.

--- a/测试工程/第二章：非周期信号与离散频谱.md
+++ b/测试工程/第二章：非周期信号与离散频谱.md
@@ -6,5 +6,70 @@
 
 经过变换后，x(t) 函数变为 x($\omega$)
 
-$$ x($\omega$) = \sum $$
+$$ x(\omega) = \int^{\infty}_{\infty} x(t) e^{-j \omega t} dt $$
 
+$$ x(t) = \frac{1}{2\pi} \int^{\infty}_{\infty} x(\omega) e^{j \omega t} d \omega $$
+
+令 $\omega = 2 \pi f$ 带入得：
+
+$$ x(f) = \int^{\infty}_{\infty} x(t) e^{-j 2 \pi f t} dt $$
+
+$$ x(t) = \int^{\infty}_{\infty} x(f) e^{j 2 \pi f t} d f $$
+
+# 能够进行傅里叶积分的条件是：
+
+- 1.在有限区间上满足狄利赫里条件；
+
+- 2. $\sum^\infty_{-\infty} |x(t)| dt$ 收敛，即绝对可积。
+ 
+
+# 非周期信号频谱的特点
+
+基频无限小，即o趋近于0。
+
+频谱连续。
+
+$|X(\omega)|$ 与 $|C_n|$ 量纲不同。$|C_n|$ 具有与原信号幅值相同的量纲，$|X(\omega)|$ 是单位频宽上的幅值。
+
+# 傅里叶变换的主要性质
+
+1.奇偶虚实性
+
+当x(t)为实数时，可得：
+
+实部为偶函数，虚部为奇函数。
+
+此时，频谱只剩下实部，故为偶函数
+
+因此
+
+
+
+| 时域 f(t) 的对称性 | 频域 F(ω) 的对称性 | 频域的实/虚部表现 |
+| ------------ | ------------ | --------- |
+| 实函数          | 共轭对称         | 实部偶，虚部奇   |
+| 实偶函数         | 实偶函数         | 纯实、偶      |
+| 实奇函数         | 纯虚奇函数        | 纯虚、奇      |
+| 虚函数          | 共轭反共轭对称      | 实部奇，虚部偶   |
+| 虚偶函数         | 虚偶函数         | 纯虚、偶      |
+| 虚奇函数         | 实奇函数         | 纯实、奇      |
+| 复函数（一般）      | 无特殊对称        | 实虚部皆无奇偶要求
+
+
+                ┌-------------------------------┐
+                │  时域 f(t)     │  频域 F(ω)   │
+                ├-------------------------------┤
+                │ 实              │  Re 偶      │
+                │                │  Im 奇      │
+                ├-------------------------------┤
+                │ 实 & 偶         │  纯实 & 偶   │
+                ├-------------------------------┤
+                │ 实 & 奇         │  纯虚 & 奇   │
+                ├-------------------------------┤
+                │ 虚              │  Re 奇      │
+                │                │  Im 偶      │
+                ├-------------------------------┤
+                │ 虚 & 偶         │  纯虚 & 偶   │
+                ├-------------------------------┤
+                │ 虚 & 奇         │  纯实 & 奇   │
+                └-------------------------------┘
